Añadi parrafo para probar

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Este es mi primer sitio web</h1>
+        <h2>Que hago ahora</h2>
+        <p>Estamos trabajando en las modificaciones de codigo y su inicializacion en git</p>
     </body>
 </html>
