Añade lenguaje, doctype, estandar de caracteres y viewport para ancho de pantalla

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<html>
+<!DOCTYPE html> //Sirve para que los navegadores antiguos lean los documentos
+<html lang="es"> //Se añade el idioma/leanguage
     <head>
+        <meta charset = "UTF-8">  //Estandar de caracteres para Colombia por su ñ y tildes
+        <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
         <title>Mi primer sitio web</title>
     </head>
     <body>
         <h1>Este es mi primer sitio web</h1>
         <h2>Que hago ahora</h2>
-        <p>Estamos trabajando en las modificaciones de codigo y su inicializacion en git</p>
+        <p>Estamos trabajando en las modificaciones de código y su inicialización en git</p>
+        <p>El niño se encuentra listo para la acción</p>
     </body>
 </html>
