--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html> //Sirve para que los navegadores antiguos lean los documentos
-<html lang="es"> //Se añade el idioma/leanguage
+<!DOCTYPE html>
+<html lang="es">
     <head>
-        <meta charset = "UTF-8">  //Estandar de caracteres para Colombia por su ñ y tildes
+        <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
         <title>Mi primer sitio web</title>
     </head>
