--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
-        <title>Mi primer sitio web</title>
+        <title>Mi Portafolio - Cristian Felipe Girón Vega</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Este es mi primer sitio web</h1>
-        <h2>Que hago ahora</h2>
-        <p>Estamos trabajando en las modificaciones de código y su inicialización en git</p>
-        <p>El niño se encuentra listo para la acción</p>
+        <h1>Mi portafolio</h1>
+        <h2 class="fuente-nombre">Cristian Felipe Girón Vega</h2>
+        <p class="fuente-especial">Bienvenido a mi portafolio</p>
+        <ul>
+            <li class="fuente-especial">Inicio</li>
+            <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
+        </ul>
+        <h2 class="fuente-especial">Esta es una prueba</h2>
     </body>
 </html>
