--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8"> 
         <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
         <title>Mi Portafolio - Cristian Felipe Girón Vega</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <h1>Mi portafolio</h1>
