--- a/fuentes.html
+++ b/fuentes.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/fuentes.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/waltograph-disney" type="text/css"/>
 </head>
 <body>
     <h1>Fuentes</h1>
-    <p class="courier-font">Esta es una prueba de fuentes usando la familia Courer New</p>
-    <p class="cinzel-font">Esta es una prueba de fuentes con link desde intenert</p>
+    <ul>
+        <br>
+        <li class="fuente-G"><a href="fuente-g.html"> GAME OF THRONES</a></li>
+        <li class="fuente-N"><a href="fuente-n.html">Fuente NETFLIX</a></li>
+        <li class="fuente-D"><a href="fuente-d.html">Fuente Disney</a></li>
+    </ul>
 </body>
 </html>
