--- a/fuente-d.html
+++ b/fuente-d.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funte - G</title>
-    <link rel="stylesheet" href="CSS/fuente-g.css">
+    <title>Fuente - D</title>
+    <link rel="stylesheet" href="CSS/fuente-d.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/waltograph-disney" type="text/css"/>
 </head>
 <body>
     <div class="box-1">
-        <p class="cinzel-font">GAME OF THRONES</p>
+        <p class="waltograph-disney-font">Disney</p>
     </div>
 </body>
 </html>
