Pagina principal Portafolio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
-        <h1>Mi portafolio</h1>
+        <h1>MI PORTAFOLIO</h1>
         <h2 class="fuente-nombre">Cristian Felipe Girón Vega</h2>
         <p class="fuente-especial">Bienvenido a mi portafolio</p>
         <ul>
