Repositorio cambio nombe, añadido pagina de colores

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li class="fuente-especial">Inicio</li>
             <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
+            <li class="fuente-especial"><a href="colores.html">Colores</a></li>
         </ul>
-        <h2 class="fuente-especial">Esta es una prueba</h2>
     </body>
 </html>
