--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li class="fuente-especial">Inicio</li>
             <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
             <li class="fuente-especial"><a href="colores.html">Colores</a></li>
+            <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
         </ul>
     </body>
 </html>
