--- a/bordes.html
+++ b/bordes.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="CSS/bordes.css">
 </head>
 <body>
-    <div class="box-1">
-            <p class="bordes">Ensayo con bordes alrededor de un div o contenedor</p>
+    <div class="cajas-bordes">
+        <div class="box-1">
+            <p class="solid"><b>Ensayo con bordes alrededor de un div o contenedor, este contenedor tiene un borde de tipo solid, con texto alineado a la derecha</b></p>
+        </div>
+        <div class="box-2">
+            <p class="dotted"><b>Ensayo con bordes alrededor de un div o contenedor, este contenedor tiene un borde de tipo dotted, con texto justificado</b></p>
+        </div>
+        <div class="box-3">
+            <p class="dashed"><b>Ensayo con bordes alrededor de un div o contenedor, este contenedor tiene un borde de tipo dashed, con texto centrado</b></p>
+        </div>
+        <div class="box-4">
+            <p class="double"><b>Ensayo con bordes alrededor de un div o contenedor, este contenedor tiene un borde de tipo double, con texto justificado</b></p>
+        </div>
+        <div class="box-5">
+            <p class="groove"><b>Ensayo con bordes alrededor de un div o contenedor, este contenedor tiene un borde de tipo groove, con texto alineado a la izquierda</b></p>
+        </div>
     </div>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eius, quis atque placeat cum at sunt reprehenderit perferendis cupiditate quod dolorem, hic rem ea nesciunt, quae repellendus repudiandae odit sequi?</p>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sed, eius excepturi tenetur laboriosam similique ipsa dolores ratione ducimus, deleniti voluptatum id ea numquam voluptate.</p>
-    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam sapiente ut tempore! Dolorem nobis qui saepe id cupiditate nisi tempore ullam sit numquam facere. Facere distinctio, dicta cumque quasi, unde tempore doloremque animi illo commodi repudiandae dolore odio incidunt laudantium. Rerum, totam cum?</p>
+    <div class="paragraph">
+        <p class="p1">Texto con padding, borde tipo ridge, sin margen  y alineado a la izquierda.</p>
+        <p class="p2">Texto sin padding, borde tipo inset, sin margen y centrado</p>
+        <p class="p3">Texto con padding, borde tipo outset, con margen y alineado a la izquierda</p>
+    </div>
 </body>
 </html>
