Añadir el circulo a bordes

--- a/bordes.html
+++ b/bordes.html
@@ -26,9 +26,14 @@
         </div>
     </div>
     <div class="paragraph">
-        <p class="p1">Texto con padding, borde tipo ridge, sin margen  y alineado a la izquierda.</p>
+        <p class="p1">Texto con padding, borde tipo ridge, con margen  y alineado a la izquierda.</p>
         <p class="p2">Texto sin padding, borde tipo inset, sin margen y centrado</p>
         <p class="p3">Texto con padding, borde tipo outset, con margen y alineado a la izquierda</p>
+    </div>
+    <div class="circles">
+        <div class="circle">
+            <p class="pcircle">Se realiza un circulo con border-radius</p>
+        </div>
     </div>
 </body>
 </html>
