--- a/imagenes.html
+++ b/imagenes.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="CSS/imagenes.css">
 </head>
 <body>
-    <img src="images/img1.jfif" alt="">
+    <h1>Tienda de Bicis</h1>
+    <div class="main-box">
+        <div class="box-1">
+            <h2>Bicicleta FELT</h2>
+            <img src="images/img-1.png" alt="img-1" class="img-1">
+            <p>$5'000.000 COP</p>
+            <p>Aplican términos y condiciones</p>
+        </div>
+        <div class="box-2">
+            <h2>Bicicleta MONGOOSE</h2>
+            <img src="images/img-2.png" alt="img-2" class="img-2">
+            <p>$3'800.000 COP</p>
+            <p>Aplican términos y condiciones</p>
+        </div>
+        <div class="box-3">
+            <h2>Bicicleta PINARELLO</h2>
+            <img src="images/img-3.png" alt="img-3" class="img-3">
+            <p>$10'000.000 COP</p>
+            <p>Aplican términos y condiciones</p>
+        </div>
+    </div>
 </body>
 </html>
