--- a/catalogo.html
+++ b/catalogo.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagenes</title>
-    <link rel="stylesheet" href="CSS/imagenes.css">
+    <title>Catalogo</title>
+    <link rel="stylesheet" href="CSS/catalogo.css">
 </head>
 <body>
     <h1>Tienda de Bicis</h1>
     <div class="main-box">
         <div class="box-1">
             <h2>Bicicleta FELT</h2>
-            <img src="images/img-1.png" alt="img-1" class="img-1">
+            <img src="images/Felt_1400X886.png" alt="img-1" class="img-1">
             <p>$5'000.000 COP</p>
             <p>Aplican términos y condiciones</p>
         </div>
         <div class="box-2">
             <h2>Bicicleta MONGOOSE</h2>
-            <img src="images/img-2.png" alt="img-2" class="img-2">
+            <img src="images/Moongose_3119X1981.png" alt="img-2" class="img-2">
             <p>$3'800.000 COP</p>
             <p>Aplican términos y condiciones</p>
         </div>
         <div class="box-3">
             <h2>Bicicleta PINARELLO</h2>
-            <img src="images/img-3.png" alt="img-3" class="img-3">
+            <img src="images/Pinarello_854X660.png" alt="img-3" class="img-3">
             <p>$10'000.000 COP</p>
             <p>Aplican términos y condiciones</p>
         </div>
