--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
             <li class="fuente-especial"><a href="colores.html">Colores</a></li>
             <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
-            <li class="fuente-especial"><a href="imagenes.html">Imagenes</a></li>
+            <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
         </ul>
     </body>
 </html>
