--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li class="fuente-especial"><a href="colores.html">Colores</a></li>
             <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
             <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
+            <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
         </ul>
     </body>
 </html>
