--- a/box-shadow.html
+++ b/box-shadow.html
@@ -10,20 +10,29 @@
 <body>
     <h1>Ejemplo de Box Shadow</h1>
     <div class="contenedor-padre">
-        <div class="box-1">
-            <p><b>Para añadir sombra</b></p>
+        <div class="padre1">
+            <div class="box-1">
+                <p><b>Contenedor 1 <br>Para añadir sombra</b></p>
+            </div>
         </div>
-        <div class="box-2">
-            <p><b>Sombra con desenfoque</b></p>
+        <div class="padre2">
+            <div class="box-2">
+                <p><b>Contenedor 1 <br>Sombra con desenfoque</b></p>
+            </div>
+            <div class="box-3">
+                <p class="p-3"><b>Contenedor 2 <br>Sombra con color</b></p>
+            </div>
         </div>
-        <div class="box-3">
-            <p class="p-3"><b>Sombra con color</b></p>
-        </div>
-        <div class="box-4">
-            <p><b>Sombra inset</b></p>
-        </div>
-        <div class="box-5">
-            <p class="p-5"><b>Sombra alrededor con :hover</b></p>
+        <div class="padre3">
+            <div class="box-4">
+                <p><b>Contenedor 1 <br>Sombra inset</b></p>
+            </div>
+            <div class="box-5">
+                <p class="p-5"><b>Contenedor 2 <br>Sombra alrededor con :hover</b></p>
+            </div>
+            <div class="box-6">
+                <p><b>Contenedor 3 <br>Sombra con bordes</b></p>
+            </div>
         </div>
     </div>
 </body>
