Arreglo de Box-sahdow contenedor 3

--- a/box-shadow.html
+++ b/box-shadow.html
@@ -31,7 +31,7 @@
                 <p class="p-5"><b>Contenedor 2 <br>Sombra alrededor con :hover</b></p>
             </div>
             <div class="box-6">
-                <p><b>Contenedor 3 <br>Sombra con bordes</b></p>
+                <p><b>Contenedor 3 <br>Sombra con bordes <br> :hover </b></p>
             </div>
         </div>
     </div>
