--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
             <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
             <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
+            <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
         </ul>
     </body>
 </html>                                     
