--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
             <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
             <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
+            <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
         </ul>
     </body>
 </html>                                     
