--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
             <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
             <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
+            <li class="fuente-especial"><a href="Icon2.html">Iconos</a></li>
         </ul>
     </body>
 </html>                                     
