Cambio en Iconos

--- a/Icon2.html
+++ b/Icon2.html
@@ -37,17 +37,61 @@
             </ul>
             <hr>
         </nav>
-        <div>
+        <nav>
             <ul>
                 <li><i class="fa-solid fa-comment-dots"></i><span>Comentarios</span></li>
             </ul>
             <hr>
-        </div>
+        </nav>
         <nav>
             <ul>
                 <li><i class="fa-solid fa-book"></i><span>Trips</span></li>
             </ul>
         </nav>
+    </div>
+    <div class="texto">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita nemo excepturi laborum ullam officia, a debitis, exercitationem, eveniet quam non optio consectetur? Iusto autem corrupti eum magnam error, tenetur temporibus dolor quae sit corporis quisquam cupiditate sequi qui esse dolorum cum. Dolor molestias ut quaerat illum explicabo placeat velit iste.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit? Sunt molestias perferendis doloremque animi molestiae esse aperiam excepturi est, omnis reiciendis similique error nobis atque explicabo optio sequi nulla sint quia tenetur, tempore totam, aliquam possimus itaque distinctio? Sint maxime voluptatum porro quam tempore repudiandae quos non ad possimus.</p>
     </div>
 </body>
 </html>
