--- a/Iconos.html
+++ b/Iconos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iconos</title>
     <link rel="stylesheet" href="icons/all.css">
-    <link rel="stylesheet" href="CSS/icon2.css">
+    <link rel="stylesheet" href="CSS/iconos.css">
 </head>
 <body>
     <div class="menu-general">
