ensayo con mediaquery y si sube cambios

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
             <li class="fuente-especial"><a href="Iconos.html">Iconos</a></li>
             <li class="fuente-especial"><a href="navSENA.html">Menú SENA</a></li>
+            <li class="fuente-especial"><a href="mediaQuery.html">Media Query</a></li>
         </ul>
     </body>
 </html>                                     
