--- a/mediaQuery.html
+++ b/mediaQuery.html
@@ -8,6 +8,15 @@
     <title>MediaQuery</title>
 </head>
 <body>
-    
+    <nav class="menu">
+        <label class="menu-hamburger">&#9776</label>
+        <ul class="main-menu">
+            <li class="item-menu">Inicio</li>
+            <li class="item-menu">Productos</li>
+            <li class="item-menu">Contáctenos</li>
+            <li class="item-menu">Partners</li>
+            <li class="item-menu">Galería</li>
+        </ul>
+    </nav>
 </body>
 </html>
