--- a/index.html
+++ b/index.html
@@ -7,21 +7,33 @@
         <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
-        <h1>MI PORTAFOLIO</h1>
-        <h2 class="fuente-nombre">Cristian Felipe Girón Vega</h2>
-        <p class="fuente-especial">Bienvenido a mi portafolio</p>
-        <ul>
-            <li class="fuente-especial">Inicio</li>
-            <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
-            <li class="fuente-especial"><a href="colores.html">Colores</a></li>
-            <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
-            <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
-            <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
-            <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
-            <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
-            <li class="fuente-especial"><a href="Iconos.html">Iconos</a></li>
-            <li class="fuente-especial"><a href="navSENA.html">Menú SENA</a></li>
-            <li class="fuente-especial"><a href="mediaQuery.html">Media Query</a></li>
-        </ul>
+        <div class="top">
+            <nav class="top-menu">
+                <ul class="ultop-menu">
+                    <li class="listtopmenu"><a href="#">Home</a></li>
+                    <li class="listtopmenu"><a href="">About</a></li>
+                    <li class="listtopmenu"><a href="">Skills</a></li>
+                    <li class="listtopmenu"><a href="">Work</a></li>
+                    <li class="listtopmenu"><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="work">
+            <nav class="work-menu">
+                <ul class="ulwork-menu">
+                    <li class="fuente-especial">Inicio</li>
+                    <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
+                    <li class="fuente-especial"><a href="colores.html">Colores</a></li>
+                    <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
+                    <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
+                    <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
+                    <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
+                    <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
+                    <li class="fuente-especial"><a href="Iconos.html">Iconos</a></li>
+                    <li class="fuente-especial"><a href="navSENA.html">Menú SENA</a></li>
+                    <li class="fuente-especial"><a href="mediaQuery.html">Media Query</a></li>
+                </ul>
+            </nav>
+        </div> 
     </body>
 </html>                                     
