cambios en el portafolio 2

--- a/index.html
+++ b/index.html
@@ -5,23 +5,48 @@
         <meta name="viewport" content="width=device-wiath, initial-scale=1.0"> 
         <title>Mi Portafolio - Cristian Felipe Girón Vega</title>
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="icons/all.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="top">
             <nav class="top-menu">
                 <ul class="ultop-menu">
-                    <li class="listtopmenu"><a href="#">Home</a></li>
+                    <li class="listtopmenu"><a href="#home">Home</a></li>
                     <li class="listtopmenu"><a href="">About</a></li>
                     <li class="listtopmenu"><a href="">Skills</a></li>
-                    <li class="listtopmenu"><a href="">Work</a></li>
+                    <li class="listtopmenu"><a href="#work">Work</a></li>
                     <li class="listtopmenu"><a href="">Contact</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="work">
+        <div class="contact">
+            <div class="line"></div>
+            <nav>
+                <ul>
+                    <li class="contact-ver"><a href=""><i class="fa-brands fa-github"></i></a></li>
+                    <li class="contact-ver"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li class="contact-ver"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="contact-ver"><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="contact-ver"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li class="contact-ver"><a href=""></a></li>
+                </ul>
+            </nav>   
+        </div>
+        <section class="home">
+
+        </section>
+        <section class="about">
+
+        </section>
+        <section class="skills">
+
+        </section>
+        <section class="work">
             <nav class="work-menu">
                 <ul class="ulwork-menu">
-                    <li class="fuente-especial">Inicio</li>
                     <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
                     <li class="fuente-especial"><a href="colores.html">Colores</a></li>
                     <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
@@ -34,6 +59,9 @@
                     <li class="fuente-especial"><a href="mediaQuery.html">Media Query</a></li>
                 </ul>
             </nav>
-        </div> 
+        </section>
+        <section class="contacts">
+            
+        </section>
     </body>
 </html>                                     
