--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <nav class="top-menu">
                 <ul class="ultop-menu">
                     <li class="listtopmenu"><a href="#home">Home</a></li>
-                    <li class="listtopmenu"><a href="">About</a></li>
-                    <li class="listtopmenu"><a href="">Skills</a></li>
+                    <li class="listtopmenu"><a href="#about">About</a></li>
+                    <li class="listtopmenu"><a href="#skills">Skills</a></li>
                     <li class="listtopmenu"><a href="#work">Work</a></li>
-                    <li class="listtopmenu"><a href="">Contact</a></li>
+                    <li class="listtopmenu"><a href="#contacts">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -26,41 +26,55 @@
             <div class="line"></div>
             <nav>
                 <ul>
-                    <li class="contact-ver"><a href=""><i class="fa-brands fa-github"></i></a></li>
-                    <li class="contact-ver"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                    <li class="contact-ver"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="contact-ver"><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="contact-ver"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li class="contact-ver"><a href="https://www.github.com/sircagev"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="contact-ver"><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li class="contact-ver"><a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="contact-ver"><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="contact-ver"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li class="contact-ver"><a href=""></a></li>
                 </ul>
             </nav>   
         </div>
-        <section class="home">
-
+        <section class="home" id="home">
+            <p>jcdcsdncos</p>
         </section>
-        <section class="about">
-
+        <section class="about" id="about">
+            <div class="presentation">
+                <h1>Titulo 1</h1>
+                <h2>titulo 2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium veritatis, quod aspernatur nobis animi exercitationem, nisi sequi, id ipsum doloribus eveniet consequuntur. Assumenda similique ut voluptatibus tempora atque sed.</p>
+            </div>
+            <div class="photo"><i class="fa-solid fa-user"></i></div>
         </section>
-        <section class="skills">
-
+        <section class="skills" id="skills">
+            <div class="container-icons">
+                <div class="box-icon">
+                    <i class="fa-brands fa-html5"></i>
+                    <p>HTML5</p>
+                </div>
+                <div class="box-icon">
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <p>CSS3</p>
+                </div>
+                <div class="box-icon">
+                    <i class="fa-brands fa-square-js"></i>
+                    <p>JavaScript</p>
+                </div>
+            </div>
         </section>
-        <section class="work">
-            <nav class="work-menu">
-                <ul class="ulwork-menu">
-                    <li class="fuente-especial"><a href = "fuentes.html">Fuentes</a></li>
-                    <li class="fuente-especial"><a href="colores.html">Colores</a></li>
-                    <li class="fuente-especial"><a href="bordes.html">Bordes</a></li>
-                    <li class="fuente-especial"><a href="catalogo.html">Catalogo</a></li>
-                    <li class="fuente-especial"><a href="box-shadow.html">Box-Shadow</a></li>
-                    <li class="fuente-especial"><a href="Tablas.html">Tablas</a></li>
-                    <li class="fuente-especial"><a href="formulario.html">Formulario</a></li>
-                    <li class="fuente-especial"><a href="Iconos.html">Iconos</a></li>
-                    <li class="fuente-especial"><a href="navSENA.html">Menú SENA</a></li>
-                    <li class="fuente-especial"><a href="mediaQuery.html">Media Query</a></li>
-                </ul>
-            </nav>
+        <section class="work" id="work">
+            <div class="lesson-work"><a href = "fuentes.html"><div class="img"><span>Fuentes</span></div></a></div>
+            <div class="lesson-work"><a href="colores.html"><div class="img"><span>Colores</span></div></a></div>
+            <div class="lesson-work"><a href="bordes.html"><div class="img"><span>Bordes</span></div></a></div>
+            <div class="lesson-work"><a href="catalogo.html"><div class="img"><span>Catalogo</span></div></a></div>
+            <div class="lesson-work"><a href="box-shadow.html"><div class="img"><span>Box-Shadow</span></div></a></div>
+            <div class="lesson-work"><a href="Tablas.html"><div class="img"><span>Tablas</span></div></a></div>
+            <div class="lesson-work"><a href="formulario.html"><div class="img"><span>Formulario</span></div></a></div>
+            <div class="lesson-work"><a href="Iconos.html"><div class="img"><span>Iconos</span></div></a></div>
+            <div class="lesson-work"><a href="navSENA.html"><div class="img"><span>Menú SENA</span></div></a></div>
+            <div class="lesson-work"><a href="mediaQuery.html"><div class="img"><span>Media Query</span></div></a></div>
         </section>
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             
         </section>
     </body>
