--- a/index.html
+++ b/index.html
@@ -39,14 +39,24 @@
             <p>jcdcsdncos</p>
         </section>
         <section class="about" id="about">
-            <div class="presentation">
-                <h1>Titulo 1</h1>
-                <h2>titulo 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium veritatis, quod aspernatur nobis animi exercitationem, nisi sequi, id ipsum doloribus eveniet consequuntur. Assumenda similique ut voluptatibus tempora atque sed.</p>
+            <div class="title-skill">
+                <h2>About Me</h2>
+                <div class="line-skill"></div>
             </div>
-            <div class="photo"><i class="fa-solid fa-user"></i></div>
+            <div class="lalala">
+                <div class="presentation">
+                    <h1>Titulo 1</h1>
+                    <h2>titulo 2</h2>
+                    <p class="paragraph-presentation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis accusantium veritatis, quod aspernatur nobis animi exercitationem, nisi sequi, id ipsum doloribus eveniet consequuntur. Assumenda similique ut voluptatibus tempora atque sed.</p>
+                </div>
+                <div class="photo"><i class="fa-solid fa-user"></i></div>
+            </div>
         </section>
         <section class="skills" id="skills">
+            <div class="title-skill">
+                <h2>Skills</h2>
+                <div class="line-skill"></div>
+            </div>
             <div class="container-icons">
                 <div class="box-icon">
                     <i class="fa-brands fa-html5"></i>
@@ -63,19 +73,39 @@
             </div>
         </section>
         <section class="work" id="work">
-            <div class="lesson-work"><a href = "fuentes.html"><div class="img"><span>Fuentes</span></div></a></div>
-            <div class="lesson-work"><a href="colores.html"><div class="img"><span>Colores</span></div></a></div>
-            <div class="lesson-work"><a href="bordes.html"><div class="img"><span>Bordes</span></div></a></div>
-            <div class="lesson-work"><a href="catalogo.html"><div class="img"><span>Catalogo</span></div></a></div>
-            <div class="lesson-work"><a href="box-shadow.html"><div class="img"><span>Box-Shadow</span></div></a></div>
-            <div class="lesson-work"><a href="Tablas.html"><div class="img"><span>Tablas</span></div></a></div>
-            <div class="lesson-work"><a href="formulario.html"><div class="img"><span>Formulario</span></div></a></div>
-            <div class="lesson-work"><a href="Iconos.html"><div class="img"><span>Iconos</span></div></a></div>
-            <div class="lesson-work"><a href="navSENA.html"><div class="img"><span>Menú SENA</span></div></a></div>
-            <div class="lesson-work"><a href="mediaQuery.html"><div class="img"><span>Media Query</span></div></a></div>
+            <div class="title-skill">
+                <h2>Works</h2>
+                <div class="line-skill"></div>
+            </div>
+            <div class="work2">
+                <div class="lesson-work img1"><a href = "fuentes.html"><div class="pspan"><span>Fuentes</span></div></a></div>
+                <div class="lesson-work img2"><a href="colores.html"><div class="pspan"><span>Colores</span></div></a></div>
+                <div class="lesson-work img3"><a href="bordes.html"><div class="pspan"><span>Bordes</span></div></a></div>
+                <div class="lesson-work img4"><a href="catalogo.html"><div class="pspan"><span>Catalogo</span></div></a></div>
+                <div class="lesson-work img5"><a href="box-shadow.html"><div class="pspan"><span>Box-Shadow</span></div></a></div>
+                <div class="lesson-work img6"><a href="Tablas.html"><div class="pspan"><span>Tablas</span></div></a></div>
+                <div class="lesson-work img7"><a href="formulario.html"><div class="pspan"><span>Formulario</span></div></a></div>
+                <div class="lesson-work img8"><a href="Iconos.html"><div class="pspan"><span>Iconos</span></div></a></div>
+                <div class="lesson-work img9"><a href="navSENA.html"><div class="pspan"><span>Menú SENA</span></div></a></div>
+                <div class="lesson-work img10"><a href="mediaQuery.html"><div class="pspan"><span>Media Query</span></div></a></div>
+            </div>   
         </section>
         <section class="contacts" id="contacts">
-            
+            <div class="title-skill">
+                <h2>Contact</h2>
+                <div class="line-skill"></div>
+            </div>
+            <div class="icon-contact">
+                <div class="contact-ver"><a href="https://www.github.com/sircagev"><i class="fa-brands fa-github uno"></i></a></div>
+                <div class="contact-ver"><a href="https://www.instagram.com"><i class="fa-brands fa-instagram dos"></i></a></div>
+                <div class="contact-ver"><a href="https://www.twitter.com"><i class="fa-brands fa-twitter tres"></i></a></div>
+                <div class="contact-ver"><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in cuatro"></i></a></div>
+                <div class="contact-ver"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f cinco"></i></a></div>
+                <div class="contact-ver"><a href=""></a></div> 
+            </div>
+            <p class="contact-bottom">cristianf_giron@soy.sena.edu.co</p>
+            <p class="contact-bottom">Cel: 3123028342</p>
+            <p class="contact-bottom">SENA - Pitalito</p>
         </section>
     </body>
 </html>                                     
